--- a/src/app/data-driven/data-driven.component.html
+++ b/src/app/data-driven/data-driven.component.html
@@ -14,6 +14,9 @@
                    class="form-control"
                    id="email"
                    formControlName="email">
+            <div *ngIf="!myForm.controls['email'].valid">
+                Invalid Email
+            </div>       
         </div>
     </div>
 
