--- a/src/app/data-driven/data-driven.component.html
+++ b/src/app/data-driven/data-driven.component.html
@@ -35,13 +35,13 @@
             {{g}}
         </label>
     </div>
-    <div>
+    <div formArrayName="hobbies">
         <h3>Hobbies</h3>
         <div class="form-group">
             <input type="text"
-                   class="form-control">
+                   class="form-control" formControlName="0">
         </div>
     </div>
-    <button type="button" class="btn btn-default">Add Hobby</button>
+    <button type="button" class="btn btn-default" (click)="onAddHobby">Add Hobby</button>
     <button type="submit" class="btn btn-primary" [disabled]="!myForm.valid">Submit</button>
 </form>
